# cookiecutter-data-science

./: README.md  cookiecutter.json
hooks/: pre_gen_project.py
{{ cookiecutter.repo_name }}/: .gitignore  .pre-commit-config.yaml  Makefile  README.md  TODO.md  environment.yaml  pyproject.toml  requirements.txt  test_environment.py
{{ cookiecutter.repo_name }}/src/mypkg/: excel.mplstyle
{{ cookiecutter.repo_name }}/src/mypkg/data/: athena.py  make_dataset.py
